Fix settings not showing bug.

--- a/src/components/CopyLinkButton/CopyLinkButton.css
+++ b/src/components/CopyLinkButton/CopyLinkButton.css
@@ -14,5 +14,5 @@
 }
 
 .active {
-    background-color: var(--clr-dark);
+    background-color: var(--clr-darker-tan);
 }
