--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     --clr-dark: #201207;
     --clr-light: #FFF4DE;
     --clr-tan: #ecd098;
+    --clr-darker-tan: #b58a47;
     --clr-bg: #A9CEE5;
     --clr-valid: #03B70F;
     --clr-invalid: #B70000;
@@ -68,7 +69,7 @@ button:disabled {
 }
 
 button:active:not(:disabled) {
-    background-color: var(--clr-dark);
+    background-color: var(--clr-darker-tan);
 }
 
 input {
